recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:21: error: expected start of definition
	override def run() {
                 ^Sierpinski:25: error: Unmatched closing brace '}' ignored here
}
^